# libphidget-packaging

./: README  libphidget-dev_2.1.8.20110615-0ubuntu1_amd64.deb  libphidget_2.1.7.20100618-0ubuntu2.dsc  libphidget_2.1.7.20100618-0ubuntu2_source.build  libphidget_2.1.7.20100618-0ubuntu2_source.changes  libphidget_2.1.7.20100621-0ubuntu2.dsc  libphidget_2.1.7.20100621-0ubuntu2_source.build  libphidget_2.1.7.20100621-0ubuntu2_source.changes  libphidget_2.1.7.20101103-0ubuntu1.dsc  libphidget_2.1.7.20101103-0ubuntu1_source.build  libphidget_2.1.7.20101103-0ubuntu1_source.changes  libphidget_2.1.7.20101222-0ubuntu1.dsc  libphidget_2.1.7.20101222-0ubuntu1_source.build  libphidget_2.1.7.20101222-0ubuntu1_source.changes  libphidget_2.1.8.20110615-0ubuntu1.dsc  libphidget_2.1.8.20110615-0ubuntu1_source.changes  libphidget_2.1.8.20120123-0ubuntu1.dsc  libphidget_2.1.8.20120123-0ubuntu1_source.build  libphidget_2.1.8.20120123-0ubuntu1_source.changes
libphidget-2.1.7.20100618/: Makefile.am  Makefile.in  README  configure  configure.ac  cphidget.h  cphidgetconstants.h  cphidgetdictionary.c  cphidgetdictionary.h  cphidgetgps.c  cphidgetgps.h  cphidgetinterfacekit.c  cphidgetmanager.c  cphidgetrfid.c  cphidgettemperaturesensor.c  cphidgettextlcd.h  cphidgettextled.h  csocketevents.h  cusb.h  stdafx.h  zeroconf_lookup.c
libphidget-2.1.7.20100618/Java/: com_phidgets_InterfaceKitPhidget.h  phidget_jni.c
libphidget-2.1.7.20100618/debian/: changelog  watch
libphidget-2.1.7.20100618/examples/: Makefile.in
libphidget-2.1.7.20100618/include/: dns_sd.h
libphidget-2.1.7.20100618/utils/: ptree.c  utils.c
libphidget-2.1.7.20100621/: Makefile.in  configure.ac  cphidgetconstants.c  cphidgetencoder.c  cphidgetmanager.h  cphidgetmotorcontrol.h  cphidgetphsensor.c  cphidgetservo.c  cphidgettemperaturesensor.h  cphidgettextled.c  csocketevents.c  csocketopen.c  cthread.c  phidget21.h  phidget21int.h  version.sh  zeroconf.c
libphidget-2.1.7.20100621.orig/: Makefile.am  README  configure  cphidget.c  cphidgetadvancedservo.c  cphidgetattr.h  cphidgetconstantsinternal.h  cphidgetgeneric.c  cphidgetir.c  cphidgetir.h  cphidgetmotorcontrol.c  cphidgetphsensor.h  cphidgetstepper.c  cphidgettextlcd.c  cthread.h
libphidget-2.1.7.20100621.orig/Java/: com_phidgets_IRPhidget.c  com_phidgets_IRPhidget.h  com_phidgets_LEDPhidget.c  com_phidgets_ServoPhidget.h  com_phidgets_SpatialPhidget.h
libphidget-2.1.7.20100621.orig/Java/com/phidgets/: AdvancedServoPhidget.java  IRCode.java  LEDPhidget.java  Manager.java
libphidget-2.1.7.20100621.orig/dict/: pdictclient.c
libphidget-2.1.7.20100621.orig/examples/: Makefile.in  manager.c
libphidget-2.1.7.20100621.orig/linux/: cusblinux.c
libphidget-2.1.7.20100621/Java/: com_phidgets_DictionaryKeyListener.c  com_phidgets_RFIDPhidget.c  com_phidgets_TextLCDPhidget.c
libphidget-2.1.7.20100621/Java/com/phidgets/: Dictionary.java  IRLearnedCode.java  Phidget.java  TemperatureSensorPhidget.java
libphidget-2.1.7.20100621/Java/com/phidgets/event/: TagLossEvent.java
libphidget-2.1.7.20100621/debian/: changelog  control  rules.solid  substvars_backup
libphidget-2.1.7.20100621/debian/patches/: debian-changes-2.1.7.20100618-0ubuntu1
libphidget-2.1.7.20100621/dict/: pdict.h
libphidget-2.1.7.20100621/examples/: ifkit.c
libphidget-2.1.7.20100621/linux/: zeroconf_avahi.c
libphidget-2.1.7.20101103/: Makefile.am  Makefile.in  README  configure  cphidget.h  cphidgetaccelerometer.c  cphidgetconstants.c  cphidgetdictionary.c  cphidgetgps.c  cphidgetir.c  cphidgetmanager.c  cphidgetrfid.h  cphidgetspatial.c  cphidgetstepper.c  cphidgettextlcd.c  csocketopen.c  cthread.h  phidget21int.h  version.sh
libphidget-2.1.7.20101103.orig/: clog.c  configure.ac  cphidgetattr.h  cphidgetencoder.c  cphidgetfrequencycounter.h  cphidgetsbc.c  cphidgetstepper.h  cphidgettemperaturesensor.c  phidget21.h
libphidget-2.1.7.20101222/: ChangeLog  Makefile.am  README  configure.ac  cphidgetbridge.h  cphidgetfrequencycounter.h  cphidgetgps.h  cphidgetinterfacekit.h  cphidgetir.c  cphidgetmotorcontrol.h  cphidgetservo.c  cphidgetstepper.h  zeroconf.c
libphidget-2.1.7.20101222.orig/: Makefile.in  configure  cphidget.c  cphidgetadvancedservo.c  cphidgetanalog.c  cphidgetanalog.h  cphidgetbridge.c  cphidgetconstantsinternal.h  cphidgetdictionary.h  cphidgetfrequencycounter.c  cphidgetled.c  cphidgetled.h  cphidgetmacros.h  cphidgetmotorcontrol.c  cphidgetrfid.c  cphidgetstepper.c  cphidgettextlcd.h  csocket.h  csocketevents.c  csocketopen.c  cthread.c  stdafx.h  version.sh
libphidget-2.1.8.20110615/: Makefile.am  configure.ac  cphidget.c  cphidgetanalog.h  cphidgetattr.h  cphidgetbridge.c  cphidgetencoder.h  cphidgetgps.h  cphidgetinterfacekit.c  cphidgetled.c  cphidgetmacros.h  cphidgetmanager.c  cphidgetrfid.c  cphidgetspatial.c  cphidgettemperaturesensor.c  cphidgetweightsensor.h  csocketevents.c  csocketopen.c  cusb.h  version.sh
libphidget-2.1.8.20110615.orig/: Makefile.in  aclocal.m4  clog.c  configure  cphidget.h  cphidgetaccelerometer.c  cphidgetadvancedservo.c  cphidgetadvancedservo.h  cphidgetanalog.c  cphidgetconstants.c  cphidgetfrequencycounter.c  cphidgetfrequencycounter.h  cphidgetmotorcontrol.c  cphidgetmotorcontrol.h  cphidgetrfid.h  cphidgetsbc.c  cphidgetservo.c  cphidgetstepper.c  cphidgettemperaturesensor.h  cphidgettextlcd.c  csocket.h  cthread.c  cthread.h  phidget21.h  stdafx.h  zeroconf.c
libphidget-2.1.8.20120123/: configure  cphidget.c  cphidgetaccelerometer.h  cphidgetadvancedservo.c  cphidgetencoder.c  cphidgetgeneric.c  cphidgetmanager.c  cphidgetmanager.h  cphidgetservo.h  cphidgetspatial.c  cphidgetspatial.h  cphidgettextlcd.h  cppheader  csocketevents.c  csocketopen.c  cthread.c  cusb.h  phidget21.h  version.sh  zeroconf.c
libphidget-2.1.8.20120123.orig/: Makefile.am  Makefile.in  README  cphidget.h  cphidgetadvancedservo.h  cphidgetattr.h  cphidgetbridge.h  cphidgetconstantsinternal.h  cphidgetgps.c  cphidgetinterfacekit.h  cphidgetled.c  cphidgetrfid.c  cphidgetrfid.h  cphidgetstepper.c  phidget21int.h  stdafx.h
(+93 files in other folders)
